[package]
name = "greptime-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greptimedb-ingester = { path = "./greptimedb-ingester-rust" }
derive-new = "0.6.0"
derive_builder = "0.20"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.11", features = ["tls", "tls-roots", "gzip", "zstd"] }
rand = "0.8.5"
chrono = "0.4.38"